-------------------------------------
	4.3-0	
-------------------------------------
VirtualBox 4.3.x support.


-------------------------------------
	4.2-8	2013-10-15
-------------------------------------
Updated media menus to indicate which media is already mounted
by the given virtual machine.

Minor UI enhancements.

Fixed bug when collapsing and expanding the Preview box in VM
details sections that would leave an arrow image drawn over the
preview image.

Removed bug workarounds for old version of Opera.

Minor translation bug fixes.

Added VNC viewer for VirtualBox-OSE with VNC support
(experimental).

VRDE port in the Details pane is now a vnc:// link if VirtualBox
with VNC support is detected and the VM is running.

-------------------------------------
	4.2-7	2013-08-12
-------------------------------------
Upgraded jQuery from 1.8.2 to 1.10.2. Updated code to reflect
library changes.

Upgraded jQuery-UI from 1.8.23 to 1.10.3. Updated code to reflect
library changes.

Consolidated some JavaScript, and CSS files where possible.

Minor translation fixes.

Some VM properties are now editable when a VM is in a Saved state.

Fixed bug when selecting a medium by location where it would have
to be selected twice.
http://code.google.com/p/phpvirtualbox/issues/detail?id=641

Minor UI enhancements.

EHCI is no longer enabled by default on USB controller when
creating a new VM.

Moved USB, Serial, and Parallel port settings back into their own
sections.

Progress operation text is now resizable.

Fixed bug that would not update VM display when a VM's custom icon
was changed.

Fixed bug when refreshing VM data that would not cause redraws of
certain sections.

Fixed display of Acceleration properties in VM details view.

Added ability to handle more than one instance of SATA, SAS, and
SCSI controllers in VM settings. 

Changed new controller names when creating a new VM to align with
VirtualBox naming conventions.
